2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* ChangeLog, configure.in,
	  vicious-extensions/ve-misc.c:  Fix
	  build on Darwin.  Fixes bug #322085.
	  Patch provided by dmacks@netspace.org.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* NEWS: Updated so it has 2.8.0.6 info.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/getvt.c: Fix get_free_vt_linux so
	  it returns the correct VT.  Fixes bug
	  #322137.  Patch by Frederic Crozat.

2005-11-21  Brian Cameron <Brian.Cameron@sun.com>

	This further improves GDM configuration so that
	now only the GDM daemon parses and manages the
	configuration file.  Most client programs use
	the GET_CONFIG command to access needed data.
	This simplifies the configuration logic and 
	puts all configuration parsing in one place
	and gets rid of a lot of global variables that
	were making the code look messy.  This also
	gets rid of several places where gnome_config 
	deprecated functions were being used.  I have
	cleaned up the code so that the vicious-extensions
	code is more localized in gui/gdmconfig.[ch].
	Some work is left to do:  gdmflexiserver still
	uses gnome_config functions and gdmconfig should
	use the new functions for reading from the
	configuration file.  Some compile issues fixed
	as highlghted by dmacks@netspace.org to fix
	bug #322083.

	* NEWS: Fixed comment.
	* daemon/gdm.h: Further cleanup of #define's so
	  that they better match the names of the config
	  keys.
	* daemon/gdm.c: Now GET_CONFIG returns "OK" if
	  the key is valid but has no value when it 
	  is a string.  Now free return value from
	  gdm_config_to_string.
	* daemon/Makefile.am, gui/greeter/Makefile.am:
	  Now the daemon validates the greeter's theme
	  directory, so pass the default value into the
	  daemon and not the greeter.
	* daemon/gdmconfig.h: Added gdm_is_valid_key
	  and corrected prototype for
	  gdm_set_user_session_lang.
	* daemon/slave.c: Fix warning and compile errors.