@@ -1,8 +1,15 @@
 2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
 
-	* ChangeLog, configure.in,
-	  vicious-extensions/ve-misc.c:  Fix
-	  build on Darwin.  Fixes bug #322085.
+        * gui/gdmlogin.c: Now use GDK_RGB_DITHER_MAX
+          so that GDM always displays a nice background
+          regardless of X configuration (X in 16bpp mode).
+          Fixes bug #322029.  Patch provided by Frederic
+          Crozat.
+
+2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
+
+	* configure.in, vicious-extensions/ve-misc.c:
+	  Fix build on Darwin.  Fixes bug #322085.
 	  Patch provided by dmacks@netspace.org.
 
 2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
